--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 
-<!-- saved from url=(0029)http://localhost/AD/login.php -->
+<!-- saved from url=(0047)http://localhost/JomTeam/JomTeam/easy/login.php -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Login</title>
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./index_files/login1.css">
+    <link rel="stylesheet" href="./index_files/login.css">
 </head>
 
 <body>
@@ -17,19 +17,19 @@
                 Let's turn every game into a winning experience!<br>
                 ⚽🏀🏈
             </p>
-            <form method="post" action="http://localhost/AD/check_login.php" style="margin-left: 10%">
+            <form method="post" action="http://localhost/JomTeam/JomTeam/easy/check_login.php">
                 <div class="key_in">
-                    <input type="text" name="email" placeholder="Email" style="border: none; margin-left:5%; margin-top:4%">
+                    <input type="text" name="email" placeholder="Email">
                 </div>
                 <div class="key_in">
-                    <input type="password" name="password" placeholder="Password" style="border: none; margin-left:5%; margin-top:4%">
+                    <input type="password" name="password" placeholder="Password">
                 </div>
                 <div>
                     <p class="register">
-                        Not registered yet? <a href="./register.html" class="register1">Create a new account</a>
+                        Not registered yet? <a href="./register.php" class="register1">Create a new account</a>
                     </p>
                 </div>
-                <p><input type="submit" value="Login" class="login-button"></p>
+                <p><input type="submit" value="Login" class="button"></p>
             </form>
         </div>
         <div class="picture_box">
